08-service/03-internal-service-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-internal-service2
spec:
  ports:
    - port: 81
      targetPort: 9875
  selector:
    app: simple-nginx
