08-service/03-internal-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-internal-service
spec:
  ports:
    - port: 80
      targetPort: 9876
  selector:
    app: simple-deployment
